--- a/src/Quote.css
+++ b/src/Quote.css
@@ -7,7 +7,7 @@
     text-align: center;
     align-items: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    width: 500px;
+    margin-top: 150px;
 }
 
 .newQuote {
@@ -21,7 +21,9 @@
 }
 
 .text {
-    background-color: grey;
+    color: blueviolet;
+    font-size: large;
+    margin: 20px;
 }
 
 .q {
